tests/dataset/tpc-ds/compiler/c/q46.error
/tmp/TestCCompiler_TPCDS_Goldenq464123981974/001/prog.c: In function ‘test_TPCDS_Q46_simplified’:
/tmp/TestCCompiler_TPCDS_Goldenq464123981974/001/prog.c:310:51: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  310 |   if (test_TPCDS_Q46_simplified_result.len != tmp1.len) {
      |                                                   ^
      |                                                   ->
/tmp/TestCCompiler_TPCDS_Goldenq464123981974/001/prog.c:314:60: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  314 |       if (test_TPCDS_Q46_simplified_result.data[i3] != tmp1.data[i3]) {
      |                                                            ^
      |                                                            ->
/tmp/TestCCompiler_TPCDS_Goldenq464123981974/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_TPCDS_Goldenq464123981974/001/prog.c:357:7: error: conflicting types for ‘cities’; have ‘int’
  357 |   int cities = cities;
      |       ^~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq464123981974/001/prog.c:355:15: note: previous definition of ‘cities’ with type ‘list_string’
  355 |   list_string cities = list_string_create(1);
      |               ^~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq464123981974/001/prog.c:360:7: warning: implicit declaration of function ‘base_item_list_t_create’ [-Wimplicit-function-declaration]
  360 |       base_item_list_t_create(dn.len * customer.len * customer_address.len);
      |       ^~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq464123981974/001/prog.c:360:48: error: ‘(customer_t *)&customer’ is a pointer; did you mean to use ‘->’?
  360 |       base_item_list_t_create(dn.len * customer.len * customer_address.len);
      |                                                ^
      |                                                ->
/tmp/TestCCompiler_TPCDS_Goldenq464123981974/001/prog.c:360:71: error: ‘(customer_addres_t *)&customer_address’ is a pointer; did you mean to use ‘->’?
  360 |       base_item_list_t_create(dn.len * customer.len * customer_address.len);
      |                                                                       ^
      |                                                                       ->
/tmp/TestCCompiler_TPCDS_Goldenq464123981974/001/prog.c:374:36: warning: comparison between pointer and integer
  374 |         if (!(current_addr.ca_city != dnrec.bought_city)) {
      |                                    ^~
/tmp/TestCCompiler_TPCDS_Goldenq464123981974/001/prog.c:400:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  400 |     _json_string(it.c_last_name);
      |                  ~~^~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq464123981974/001/prog.c:64:32: note: expected ‘char *’ but argument is of type ‘const char *’
   64 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_TPCDS_Goldenq464123981974/001/prog.c:404:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  404 |     _json_string(it.c_first_name);
      |                  ~~^~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq464123981974/001/prog.c:64:32: note: expected ‘char *’ but argument is of type ‘const char *’
   64 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_TPCDS_Goldenq464123981974/001/prog.c:408:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  408 |     _json_string(it.ca_city);
      |                  ~~^~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq464123981974/001/prog.c:64:32: note: expected ‘char *’ but argument is of type ‘const char *’
   64 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_TPCDS_Goldenq464123981974/001/prog.c:428:38: error: incompatible types when assigning to type ‘list_int’ from type ‘base_item_list_t’
  428 |   test_TPCDS_Q46_simplified_result = result;
      |                                      ^~~~~~
