tests/dataset/tpc-ds/compiler/c/q46.c
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:41Z
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:41Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
static int depcnt = 2;
static int vehcnt = 0;
static int year = 2020;

typedef struct {
  const char *c_last_name;
  const char *c_first_name;
  const char *ca_city;
  const char *bought_city;
  int ss_ticket_number;
  double amt;
  double profit;
} tmp1_t;
typedef struct {
  int len;
  tmp1_t *data;
} tmp1_list_t;
tmp1_list_t create_tmp1_list(int len) {
  tmp1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ss_ticket_number;
  int ss_customer_sk;
  int ss_addr_sk;
  int ss_hdemo_sk;
  int ss_store_sk;
  int ss_sold_date_sk;
  double ss_coupon_amt;
  double ss_net_profit;
} store_sale_t;
typedef struct {
  int len;
  store_sale_t *data;
} store_sale_list_t;
store_sale_list_t create_store_sale_list(int len) {
  store_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int d_date_sk;
  int d_dow;
  int d_year;
} date_dim_t;
typedef struct {
  int len;
  date_dim_t *data;
} date_dim_list_t;
date_dim_list_t create_date_dim_list(int len) {
  date_dim_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(date_dim_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int s_store_sk;
  const char *s_city;
} store_t;
typedef struct {
  int len;
  store_t *data;
} store_list_t;
store_list_t create_store_list(int len) {
  store_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int hd_demo_sk;
  int hd_dep_count;
  int hd_vehicle_count;
} household_demographic_t;
typedef struct {
  int len;
  household_demographic_t *data;
} household_demographic_list_t;
household_demographic_list_t create_household_demographic_list(int len) {
  household_demographic_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(household_demographic_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ca_address_sk;
  const char *ca_city;
} customer_addres_t;
typedef struct {
  int len;
  customer_addres_t *data;
} customer_addres_list_t;
customer_addres_list_t create_customer_addres_list(int len) {
  customer_addres_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_addres_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int c_customer_sk;
  const char *c_last_name;
  const char *c_first_name;
  int c_current_addr_sk;
} customer_t;
typedef struct {
  int len;
  customer_t *data;
} customer_list_t;
customer_list_t create_customer_list(int len) {
  customer_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ss_ticket_number;
  int ss_customer_sk;
  int bought_city;
  double amt;
  double profit;
} dn_item_t;
typedef struct {
  int len;
  dn_item_t *data;
} dn_item_list_t;
dn_item_list_t create_dn_item_list(int len) {
  dn_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(dn_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  const char *c_last_name;
  const char *c_first_name;
  const char *ca_city;
  int bought_city;
  int ss_ticket_number;
  double amt;
  double profit;
} base_item_t;
typedef struct {
  int len;
  base_item_t *data;
} base_item_list_t;
base_item_list_t create_base_item_list(int len) {
  base_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(base_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static list_int test_TPCDS_Q46_simplified_result;
static void test_TPCDS_Q46_simplified() {
  tmp1_t tmp1[] = {(tmp1_t){.c_last_name = "Doe",
                            .c_first_name = "John",
                            .ca_city = "Seattle",
                            .bought_city = "Portland",
                            .ss_ticket_number = 1,
                            .amt = 5.0,
                            .profit = 20.0}};
  int tmp1_len = sizeof(tmp1) / sizeof(tmp1[0]);
  int tmp2 = 1;
  if (test_TPCDS_Q46_simplified_result.len != tmp1.len) {
    tmp2 = 0;
  } else {
    for (int i3 = 0; i3 < test_TPCDS_Q46_simplified_result.len; i3++) {
      if (test_TPCDS_Q46_simplified_result.data[i3] != tmp1.data[i3]) {
        tmp2 = 0;
        break;
      }
    }
  }
  if (!(tmp2)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  store_sale_t store_sales[] = {(store_sale_t){.ss_ticket_number = 1,
                                               .ss_customer_sk = 1,
                                               .ss_addr_sk = 1,
                                               .ss_hdemo_sk = 1,
                                               .ss_store_sk = 1,
                                               .ss_sold_date_sk = 1,
                                               .ss_coupon_amt = 5.0,
                                               .ss_net_profit = 20.0}};
  int store_sales_len = sizeof(store_sales) / sizeof(store_sales[0]);
  date_dim_t date_dim[] = {
      (date_dim_t){.d_date_sk = 1, .d_dow = 6, .d_year = 2020}};
  int date_dim_len = sizeof(date_dim) / sizeof(date_dim[0]);
  store_t store[] = {(store_t){.s_store_sk = 1, .s_city = "CityA"}};
  int store_len = sizeof(store) / sizeof(store[0]);
  household_demographic_t household_demographics[] = {(household_demographic_t){
      .hd_demo_sk = 1, .hd_dep_count = 2, .hd_vehicle_count = 0}};
  int household_demographics_len =
      sizeof(household_demographics) / sizeof(household_demographics[0]);
  customer_addres_t customer_address[] = {
      (customer_addres_t){.ca_address_sk = 1, .ca_city = "Portland"},
      (customer_addres_t){.ca_address_sk = 2, .ca_city = "Seattle"}};
  int customer_address_len =
      sizeof(customer_address) / sizeof(customer_address[0]);
  customer_t customer[] = {(customer_t){.c_customer_sk = 1,
                                        .c_last_name = "Doe",
                                        .c_first_name = "John",
                                        .c_current_addr_sk = 2}};
  int customer_len = sizeof(customer) / sizeof(customer[0]);
  list_string cities = list_string_create(1);
  cities.data[0] = "CityA";
  int cities = cities;
  dn_item_list_t dn = (dn_item_list_t){0, NULL};
  base_item_list_t tmp4 =
      base_item_list_t_create(dn.len * customer.len * customer_address.len);
  int tmp5 = 0;
  for (int tmp6 = 0; tmp6 < dn.len; tmp6++) {
    dn_item_t dnrec = dn.data[tmp6];
    for (int tmp7 = 0; tmp7 < customer_len; tmp7++) {
      customer_t c = customer[tmp7];
      if (!(dnrec.ss_customer_sk == c.c_customer_sk)) {
        continue;
      }
      for (int tmp8 = 0; tmp8 < customer_address_len; tmp8++) {
        customer_addres_t current_addr = customer_address[tmp8];
        if (!(c.c_current_addr_sk == current_addr.ca_address_sk)) {
          continue;
        }
        if (!(current_addr.ca_city != dnrec.bought_city)) {
          continue;
        }
        tmp4.data[tmp5] =
            (base_item_t){.c_last_name = c.c_last_name,
                          .c_first_name = c.c_first_name,
                          .ca_city = current_addr.ca_city,
                          .bought_city = dnrec.bought_city,
                          .ss_ticket_number = dnrec.ss_ticket_number,
                          .amt = dnrec.amt,
                          .profit = dnrec.profit};
        tmp5++;
      }
    }
  }
  tmp4.len = tmp5;
  base_item_list_t base = tmp4;
  base_item_list_t result = base;
  printf("[");
  for (int i9 = 0; i9 < result.len; i9++) {
    if (i9 > 0)
      printf(",");
    base_item_t it = result.data[i9];
    printf("{");
    _json_string("c_last_name");
    printf(":");
    _json_string(it.c_last_name);
    printf(",");
    _json_string("c_first_name");
    printf(":");
    _json_string(it.c_first_name);
    printf(",");
    _json_string("ca_city");
    printf(":");
    _json_string(it.ca_city);
    printf(",");
    _json_string("bought_city");
    printf(":");
    _json_int(it.bought_city);
    printf(",");
    _json_string("ss_ticket_number");
    printf(":");
    _json_int(it.ss_ticket_number);
    printf(",");
    _json_string("amt");
    printf(":");
    _json_float(it.amt);
    printf(",");
    _json_string("profit");
    printf(":");
    _json_float(it.profit);
    printf("}");
  }
  printf("]");
  test_TPCDS_Q46_simplified_result = result;
  test_TPCDS_Q46_simplified();
  return 0;
}
